Weird Shit Commit: new audio and sequence (/main)

--- a/src/App.css
+++ b/src/App.css
@@ -70,6 +70,7 @@
   pointer-events: none;
   /* LET ME CLICK ON ARIIIIIIIII */
   /* ok dragging ari function is dead so ill keep it liek this */
+  /* LATE UPDATE: IT FUCKING WORKS YAAA */
 }
 
 /* Typing effect styles */
